Space added on the side of tips boxes and text adjusted to be the same height

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
           <div class="container tips-container"></div>
             <div class="row id="tips-buttons">
               <h2>new york tips</h2>
-                <div class="col-10 offset-1 col-md-6 offset-md-0 free-tips-icons">
+                <div class="col-10 offset-1 col-md-5 offset-md-1 free-tips-box">
                   <h3>free activities</h3>
                     <h5>Staten Island Ferry</h5>
                     <a class="btn btn-light" href="https://siferry.com/" target="_blank">Info</a>
                     <p>
                     The Staten Island Ferry gives you amazing close up views of the Statue of Liberty.  
-                    It runs 24/7 every 30 minutes (apart from every 15 minutes weekdays during rush hours)
+                    It runs 24/7 every 30 minutes (but every 15 minutes weekdays during rush hours)
                     </p>
                     <h5>Walking Tours</h5>
                     <a class="btn btn-light" href="https://freetoursbyfoot.com/nyc-in-one-day-tour/" target="_blank">Info</a>
@@ -127,12 +127,12 @@
                     <a class="btn btn-light" href="https://littleisland.org/" target="_blank">Info</a>
                     <p>
                     Little Island is an artificial island park just off Pier 54 where you can have an audio tour,
-                    enjoy the landscape, take a yoga class, relax and watch the sunset,  or attend an event.    
+                    enjoy the landscape, take a yoga class, relax and watch the sunset.    
                     </p>
                     <h5>Films</h5>
                     <a class="btn btn-light" href="https://www.nycgovparks.org/events/free_summer_movies" target="_blank">Info</a>
                     <p>
-                    Enjoy an outdoor film at one of the many Manhattan parks from May onwards.  
+                    Enjoy a unique outdoor film experience at one of the many Manhattan parks from May to September.  
                     </p>
                     <h5>Beer tour</h5>
                     <a class="btn btn-light" href="https://brooklynbrewery.com/visit-us/brewery-tours/" target="_blank">Info</a>
@@ -141,7 +141,7 @@
                     but you can buy a drink in the bar.  
                     </p>
                 </div>
-                  <div class="col-10 offset-1 col-md-6 offset-md-0 discounted-tips-icons">
+                  <div class="col-10 offset-1 col-md-5 offset-md-0 discounted-tips-box">
                     <h3>discounted activities</h3>
                     <h5>Shopping</h5>
                     <a class="btn btn-light" href="https://www.macys.com/" target="_blank">Info</a>
@@ -180,7 +180,7 @@
           <section class="container-fluid form-container">
             <div class="row">
               <div class="col">
-                <h5>Do you have a tip? <br> Fill in the form below</h5>
+                <h4>Do you have a tip? <br> Fill in the form below</h4>
 
                 <form class="other-tips" method="POST" target="_blank" action="https://formdump.codeinstitute.net/">
                   <div class="centre-form">
