Footer layout changed for small devices

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             </div>
           </div>
         </section>
-    <!-- </div>  -->
 
       <!-- Intro-->
         <div class="container-fluid intro-container">  
@@ -283,7 +282,7 @@
               <h6>Contact</h6>
               <p>Email:thriftynyc@example.com</p> <a href="https://hotmail.com"  target="_blank"></a>
             </div>
-            <div class="col">
+            <div class="col-10 offset-2"
               <h6>Follow</h6>
               <ul class="social-links">
                 <li>
