Footer layout changed for all devices

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               </div>
             </div>
           </div>
-              <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-around mb-3 d-none d-sm-block">
+              <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-around mb-3 d-none d-md-block">
                 <div class="card">
                 <img src="assets/images/brooklyn-bridge.jpg" class="card-img-top" alt="Brooklyn Bridge">
                 <div class="card-body">
@@ -280,10 +280,11 @@
           <div class="row">
             <div class="col thrifty-email">
               <h6>Contact</h6>
-              <p>Email:thriftynyc@example.com</p> <a href="https://hotmail.com"  target="_blank"></a>
+              <a href="https://hotmail.com" target="_blank"><p>Email:thriftynyc@example.com</p></a>
             </div>
-            <div class="col-10 offset-2"
+            <div class="col-10 offset-1">
               <h6>Follow</h6>
+            </div>
               <ul class="social-links">
                 <li>
                   <a href="https://facebook.com" target="_blank">
