More card pictures added for better lighthouse score

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </div>
               <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-around mb-3">
                 <div class="card">
-                <img src="assets/images/grand-central.JPG" class="card-img-top" alt="Inside Grand Central Train Station">
+                <img src="assets/images/grand-central-new.jpg" class="card-img-top" alt="Inside Grand Central Train Station">
                 <div class="card-body">
                 <h4 class="card-title">Grand Central</h4>
                 <p class="card-text">The largest train station in the world with 44 platforms and 67 tracks on two levels.</p>
@@ -264,7 +264,7 @@
           </div>
               <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-around mb-3 d-none d-lg-block">
                 <div class="card">
-                <img src="assets/images/outdoor-cinema.JPG" class="card-img-top" alt="An outdoor cinema in a Manhattan Park">
+                <img src="assets/images/outdoor-cinema-new.jpg" class="card-img-top" alt="An outdoor cinema in a Manhattan Park">
                 <div class="card-body">
                 <h4 class="card-title">Outdoor Cinema</h4>
                 <p class="card-text">From May to August enjoy a unique outdoor cinema experience at many of New York’s parks.</p>
