Code changed and styled for footer

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <!-- Tips-->
         <section id="tips">
-          <div class="container tips-container"></div>
+          <div class="container tips-container">
             <div class="row">
               <h2>new york tips</h2>
                 <div class="col-10 offset-1 col-md-5 offset-md-1 free-tips-box">
@@ -193,6 +193,7 @@
                     </p>
                   </div>
                 </div>
+              </div>
           </section>
     
           <!-- Form-->
@@ -296,12 +297,10 @@
         </section>
          
         <!-- Footer-->
-        <footer class="container-fluid footer-container">
+        <footer class="footer-container">
           <div class="row">
-            <div class="col-12 col-lg-2 thrifty-email">
+            <div class="col thrifty-email">
               <a href="https://hotmail.com" target="_blank"><p>Email:thriftynyc@example.com</p></a>
-            </div>
-            <div class="col-12 col-lg-2">
             </div>
               <ul class="social-links">
                 <li>
