Space added between footer icons

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </div>
         
         <!-- Useful Websites-->
-        <div class="flex-container icon-container">
+        <div class="container-fluid icon-container">
           <div class="row">
             <h2>useful websites</h2>
               <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
