--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <meta name="description" content="New York free/discounted attraction website" />
+    <meta name="keywords" content= "new-york, discount, free, savings, deals"
+    />
+
+     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+
     <title>THRIFTY NYC</title>
   </head>
 
