--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <div id="hero-text">
               <h1>Unlocking the City, <br>
                   One Deal at a Time!</h1>
+            <div id="hero-text-overlay">             
+            </div>
             </div>
           </div>
         </section>
