--- a/index.html
+++ b/index.html
@@ -87,25 +87,26 @@
                 <a href="https://new.mta.info/maps" target="_blank">
                   <i class="fa-solid fa-train-subway fa-8x"></i></a>
                   <br>
-                  <span class="icon-captions">Subway <br> Map</span>
+                  <a href="https://new.mta.info/maps" target="_blank" id="icon-captions">Subway Map</a>
               </div>
               <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                 <a href="https://www.nyc.com/visitor_guide/" target="_blank">
                   <i class="fa-solid fa-map-pin fa-8x"></i></a>
                   <br>
-                  <span class="icon-captions">Visitor <br> Guide</span>
+                  <a href="https://www.nyc.com/visitor_guide/" target="_blank" id="icon-captions">Visitor Guide</a>
               </div>
                <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                 <a href="https://www.clubfreetime.com/new-york-city-nyc/free-events-things-to-do" target="_blank">
                   <i class="fa-regular fa-calendar fa-8x"></i></a>
                   <br>
-                  <span class="icon-captions">Calendar</span>
+                  <a href="https://www.clubfreetime.com/new-york-city-nyc/free-events-things-to-do" target="_blank" 
+                  id="icon-captions">Calendar</a>
               </div>
               <div class="d-flex col-12 col-md-6 col-lg-3 justify-content-center icons">
                 <a href="https://www.xe.com/currencyconverter/" target="_blank">
                   <i class="fa-solid fa-dollar-sign fa-8x"></i></a>
                   <br>
-                  <span class="icon-captions">Currency <br> Convertor</span>
+                  <a href="https://www.xe.com/currencyconverter/" target="_blank" id="icon-captions">Currency Convertor</a>
               </div>
               </div>
         </div>
