--- a/index.html
+++ b/index.html
@@ -113,92 +113,92 @@
 
         <!-- Tips-->
         <section id="tips">
-          <div class="container tips-container">
+          <div class="container-fluid tips-container">
             <div class="row">
               <h2>new york tips</h2>
                 <div class="col-10 offset-1 col-md-5 offset-md-1 free-tips-box">
                   <h3>free activities</h3>
                     <div class="activity-header">
                     <h5>Staten Island Ferry</h5>
-                    <a class="btn btn-light" href="https://siferry.com/" target="_blank">Info</a>
                     </div>
                     <p>
                     The Staten Island Ferry gives you amazing close up views of the Statue of Liberty.  
                     It runs 24/7 every 30 minutes (but every 15 minutes weekdays during rush hours)
                     </p>
+                      <a href="https://siferry.com/" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Walking Tours</h5>
-                    <a class="btn btn-light" href="https://freetoursbyfoot.com/nyc-in-one-day-tour/" target="_blank">Info</a>
                     </div>
                     <p>
                     Enjoy a selection of different walking tours lasting from 2-6 hours covering various areas
                     of New York (but not Manhattan).  Free tours but you can leave a tip.  
                     </p>
+                    <a href="https://freetoursbyfoot.com/nyc-in-one-day-tour/" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Park</h5>
-                    <a class="btn btn-light" href="https://littleisland.org/" target="_blank">Info</a>
                     </div>
                     <p>
                     Little Island is an artificial island park just off Pier 54 where you can have an audio tour,
                     enjoy the landscape, take a yoga class, relax and watch the sunset.    
                     </p>
+                    <a href="https://littleisland.org/" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Films</h5>
-                    <a class="btn btn-light" href="https://www.nycgovparks.org/events/free_summer_movies" target="_blank">Info</a>
                     </div>
                     <p>
                     Enjoy a unique outdoor film experience at one of the many Manhattan parks from May to September.  
                     </p>
+                    <a href="https://www.nycgovparks.org/events/free_summer_movies" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Beer tour</h5>
-                    <a class="btn btn-light" href="https://brooklynbrewery.com/visit-us/brewery-tours/" target="_blank">Info</a>
                     </div>
                     <p>
                     Brookyln Brewery has tours every Sunday from 1-6pm.  No tasting included
                     but you can buy a drink in the bar.  
                     </p>
+                    <a href="https://brooklynbrewery.com/visit-us/brewery-tours/" target="_blank">Read More</a>
                 </div>
                   <div class="col-10 offset-1 col-md-5 offset-md-0 discounted-tips-box">
                     <h3>discounted activities</h3>
                     <div class="activity-header">
                     <h5>Shopping</h5>
-                    <a class="btn btn-light" href="https://www.macys.com/" target="_blank">Info</a>
                     </div>
                     <p>
                     Macy’s (the largest store in the USA) offers a Visitor’s Savings pass with 10% discount on many
                     products.  Collect in store on the mezzanine level (you need ID too).  
                     </p>
+                    <a href="https://www.macys.com/" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Theatre</h5>
-                    <a class="btn btn-light" href="https://www.tdf.org/discount-ticket-programs/tkts-by-tdf/" target="_blank">Info</a>
                     </div>
                     <p>
                     Get up to 50% off a Broadway theatre ticket by going to a ticket booth on the day of the show. (You'll
                     need to queue). Also Off Broadways shows are discounted. 
                     </p>
+                    <a href="https://www.tdf.org/discount-ticket-programs/tkts-by-tdf/" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Museums</h5>
-                    <a class="btn btn-light" href="https://www.timeout.com/newyork/museums/free-museum-days-in-nyc" target="_blank"
-                    >Info</a>
                     </div>
                     <p>
                     Many museums offer free or pay what you wish entry weekly although they are busier at these times.
                     (Often musuems are closed on a Monday) 
                     </p>
+                    <a href="https://www.timeout.com/newyork/museums/free-museum-days-in-nyc" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Food</h5>
-                    <a class="btn btn-light" href="https://eatandplaycard.com/destination-new-york-city/" target="_blank">Info</a>
                     </div>
                     <p>
                     For $20 the Eat and Play card offers discounts on food, attractions, shopping and shows. 
                     </p>
+                    <a href="https://eatandplaycard.com/destination-new-york-city" target="_blank">Read More</a>
                     <div class="activity-header">
                     <h5>Drinks</h5>
-                    <a class="btn btn-light" href="https://newyorksimply.com/nyc-happy-hours-new-york-city/" target="_blank">Info</a>
                     </div>
                     <p>
                     Many New York bars off happy hours usually between 4-7pm with big savings. Who doesn't love a cheaper drink?
                     </p>
+                    <a href="https://newyorksimply.com/nyc-happy-hours-new-york-city/" target="_blank">Read More</a>
+                   
                   </div>
                 </div>
               </div>
