Footer container made fluid

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           </section>
          
         <!-- Footer-->
-        <footer class="footer-container">
+        <footer class="container-fluid footer-container">
           <div class="row">
             <div class="col thrifty-email">
               <a href="https://hotmail.com" target="_blank"><p>Email:thriftynyc@example.com</p></a>
