--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <meta name="keywords" content= "new-york, discount, free, savings, deals"
     />
 
-     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <!-- Bootstrap CDN Link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <!-- My Stylesheet -->
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+
+    <!-- Browser Tab Title -->
     <title>THRIFTY NYC</title>
   </head>
 
@@ -340,8 +346,6 @@
        </footer>
 
     <!--Bootstrap and Font Awesome scripts-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/54a37ef757.js" crossorigin="anonymous"></script>
