--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="New York free/discounted attraction website" />
-    <meta name="keywords" content= "new-york, discount, free, savings, deals"
-    />
+    <meta name="description" content="New York free/discounted attraction website">
+    <meta name="keywords" content= "new-york, discount, free, savings, deals">
 
     <!-- Bootstrap CDN Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
