--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
 
       <!-- Intro-->
-        <div class="container-fluid intro-container">  
+        <div class="container-fluid">  
           <div class="row">
             <h2>about thrifty nyc</h2>
               <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view-new">
@@ -183,7 +183,7 @@
 
         <!-- Tips-->
         <section id="tips">
-          <div class="container-fluid tips-container">
+          <div class="container-fluid">
             <div class="row">
               <h2>new york tips</h2>
                 <div class="col-10 offset-1 col-md-5 offset-md-1 free-tips-box">
