--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container-fluid">  
           <div class="row">
             <h2>about thrifty nyc</h2>
-              <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view-new">
+              <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view-new" aria-label="an aerial view of New York">
               </div>
                 <div class="col-10 offset-1 col-md-6 offset-md-0 intro-text">
                   <p>
@@ -81,8 +81,8 @@
                   </p>
                 </div>
                 </div>
-              </div> 
-              </div>
+          </div> 
+        </div>
         
         <!-- Useful Websites-->
         <div class="container-fluid icon-container">
@@ -115,7 +115,7 @@
                   <br>
                   <a href="https://www.xe.com/currencyconverter/" aria-label="currency convertor" target="_blank" class="icon-captions">Currency Convertor</a>
               </div>
-              </div>
+          </div>
         </div>
         
         <!-- Gallery-->
