Aria label taken out due to query in HTML Checker

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container-fluid">  
           <div class="row">
             <h2>about thrifty nyc</h2>
-              <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view-new" aria-label="an aerial view of New York">
+              <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view-new">
               </div>
                 <div class="col-10 offset-1 col-md-6 offset-md-0 intro-text">
                   <p>
