--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container-fluid">  
           <div class="row">
             <h2>about thrifty nyc</h2>
-              <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view-new">
+              <div class="col-10 offset-1 col-md-4 offset-md-1 aerial-view2">
               </div>
                 <div class="col-10 offset-1 col-md-6 offset-md-0 intro-text">
                   <p>
